--- a/app/views/tags/aggregatedMetrics.scala.html
+++ b/app/views/tags/aggregatedMetrics.scala.html
@@ -18,9 +18,10 @@
 @import com.linkedin.drelephant.util.Utils;
 
 @if(result.resourceUsed != 0) {
-  <p class="list-group-item-heading">
+  <p class="list-group-item-heading"">
 <table>
   <tr>
+  
 <td class="metrics-dashboard hasTooltip" width="175px"><!--<a href="/jobhistory?job-def-id=@**@helper.urlEncode(result.jobDefId)&select-graph-type=resources">--><img src='@routes.Assets.at("images/usedmemory.png")' class="metrics-icons" alt='used resources'/><!--</a>-->   @Utils.getResourceInGBHours(result.resourceUsed)  <div id="tooltip-div">
   <span> The resources used by the job in GB Hours</span>
 </div></td>
@@ -35,6 +36,19 @@
       <span> The percent of time job waited</span>
     </div></td>
   }
+  
+  <!-- ajout d'une icone pour les I/O -->
+
+<!--@if(result.inputCard > -1 && result.outputCard > -1) {  -->
+
+    <td class="metrics-dashboard hasTooltip" width="300px"><!--<a href="/jobhistory?job-def-id=@**@helper.urlEncode(result.jobDefId)&select-graph-type=resources">--><img src='@routes.Assets.at("images/InOut.png")' class="InOut-icons" alt='In Out objects'/><!--</a>-->  @result.inputCard : @result.outputCard <div id="tooltip-div">
+    <span> Total of In and Out objects (in:out)</span>
+  </div></td>
+  
+ <!-- } -->
+
+  <!-- -->
+  
   </tr>
 </table>
   </p>
