ajout de la checkbox dans la page filtrage + debut graphique du Job History

--- a/app/views/page/filterPage.scala.html
+++ b/app/views/page/filterPage.scala.html
@@ -35,6 +35,7 @@
       <input id="cu4" type="checkbox" name="Cu4" value="CU4_"> <label for="cu4"> Cu4</label><br />
       <input id="cu6" type="checkbox" name="Cu6" value="CU6_"> <label for="cu6"> Cu6</label><br />
       <input id="cu8" type="checkbox" name="Cu8" value="CU8_"> <label for="cu8"> Cu8</label><br />
+      <input id="Exception" type="checkbox" name="Exception" value="Exception"> <label for="Exception"> Exception</label><br />
 
       </br>
 
