--- a/app/views/page/jobHistoryPage.scala.html
+++ b/app/views/page/jobHistoryPage.scala.html
@@ -50,6 +50,16 @@
               } else {
                 <option value="heuristics">Heuristics</option>
               }
+            
+            
+              <!-- sagaCounters -->
+              @if(graphType == "sagaCounters") {
+                <option value="sagaCounters" selected>SAGA_Counters(new)</option>
+              } else {
+                <option value="sagaCounters">SAGA_Counters(new)</option>
+              }
+              <!-- sagaCounters -->
+              
 
             </select></td>
           <td>
