GAIATK-707 et GAIATK-205 [MCOGAIA-678] Ajout d'une fonction de purge de la BD de Dr Elephant

--- a/app/views/page/searchPage.scala.html
+++ b/app/views/page/searchPage.scala.html
@@ -28,7 +28,7 @@
 @main("Dr. Elephant - Search", "search") {
   @tags.column(3) {
     @tags.panel(){ Search } {
-      <form id="search-form" role="form" method="get" action="@routes.Application.search()">
+      <form id="search-form" name="search-form" role="form" method="get" >
         <!--Job Id, FlowExec Url and the Username test input type-->
         <div class="form-group">
           <label for="form-job-id">Job/App ID</label>
@@ -105,8 +105,23 @@
           <input type="hidden" id="form-finished-time-end" name="finished-time-end" value="" />
         </div>
 
-        <button type="submit" class="btn btn-default" id="submit-button">Get Result</button>
       </form>
+        <button type="button" onClick="submitFunction(1)" class="btn btn-default" id="submit-button">Get Result</button>
+        <button type="button" onClick="submitFunction(2)" class="btn btn-default" id="Delete-button">Delete</button>
+      
+		<script type="text/javascript">
+	    	function submitFunction(i) {
+		       	if (i==1) {
+		          document.getElementById("search-form").action="/search";
+		       	}
+		       	if (i==2) {
+		          document.getElementById("search-form").action="/delete";
+		       	}
+		       
+				document.getElementById("search-form").submit()
+	       	}
+  		</script>
+	      
     }
   }
 
