--- a/app/views/page/searchPage.scala.html
+++ b/app/views/page/searchPage.scala.html
@@ -107,9 +107,27 @@
 
       </form>
         <button type="button" onClick="submitFunction(1)" class="btn btn-default" id="submit-button">Get Result</button>
-        <button type="button" onClick="submitFunction(2)" class="btn btn-default" id="Delete-button">Delete</button>
+        <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-danger" id="Delete-button">Delete</button>
+        
+        <div class="modal" id="myModal">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title">Delete confirmation</h5>
+		      </div>
+		      <div class="modal-body">
+		        <p>Are you sure you want to delete those jobs?</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" onClick="submitFunction(2)" class="btn btn-danger">Confirm</button>
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
       
 		<script type="text/javascript">
+		
 	    	function submitFunction(i) {
 		       	if (i==1) {
 		          document.getElementById("search-form").action="/search";
