DCSAGA-1433 Add performance feedback based on scientific modules instead of global execution only

--- a/app/views/help/mapreduce/helpCustomSaga.scala.html
+++ b/app/views/help/mapreduce/helpCustomSaga.scala.html
@@ -33,7 +33,15 @@
                 <td>2205</td>
             </tr>
             <tr>
-                <td>Avg façade runtime (s) A</td>
+                <td>Avg façade runtime (s)</td>
+                <td>20000</td>
+            </tr>
+            <tr>
+                <td>Min (s)</td>
+                <td>20000</td>
+            </tr>
+            <tr>
+                <td>Max (s)</td>
                 <td>20000</td>
             </tr>
             </tbody>
