correction lien avec context

--- a/app/views/page/searchPage.scala.html
+++ b/app/views/page/searchPage.scala.html
@@ -131,10 +131,10 @@
 		
 	    	function submitFunction(i) {
 		       	if (i==1) {
-		          document.getElementById("search-form").action="/search";
+		          document.getElementById("search-form").action="./search";
 		       	}
 		       	if (i==2) {
-		          document.getElementById("search-form").action="/delete";
+		          document.getElementById("search-form").action="./delete";
 		       	}
 		       
 				document.getElementById("search-form").submit()
